# vnesc

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-reusable.yml  ci.yml  codeql.yml  release-please.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  InstallRules.cmake  VnescDeps.cmake  VnescShaders.cmake
docs/vertexnova/sc/: offline_pipeline.md  separate_samplers.md
examples/: CMakeLists.txt  README.md
examples/common/: logging_guard.h
examples/glsl/01_hello_compiler/: main.cpp
examples/glsl/02_triangle_bundle/: main.cpp
examples/glsl/03_textured_pipeline_spec/: README.md  main.cpp
examples/glsl/03_textured_pipeline_spec/shaders/: textured.pipeline.json
include/vertexnova/sc/: pipeline_build_manifest.h  sc_result.h  sc_types.h  shader_artifact.h  shader_artifact_cache.h  shader_bundle.h  shader_compiler_factory.h  shader_cross_compiler.h  shader_frontend.h  shader_pipeline_builder.h  shader_pipeline_spec.h  shader_reflection_binary.h  shader_reflector.h  shader_validator.h  vnesc.h
scripts/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1  build_windows.py  build_windows.sh  clang_formatter.py  generate-docs.sh
src/: CMakeLists.txt
src/vertexnova/sc/: pipeline_build_manifest.cpp  shader_artifact_cache.cpp  shader_bundle.cpp  shader_compiler_factory.cpp  shader_pipeline_builder.cpp  shader_pipeline_spec.cpp  shader_reflection_binary.cpp
src/vertexnova/sc/crosscompiler/: dispatch_cross_compiler.cpp  dispatch_cross_compiler.h  shader_cross_compiler.cpp  shader_cross_compiler.h  spirvcross_cross_compiler.cpp  spirvcross_cross_compiler.h  tint_cross_compiler.cpp  tint_cross_compiler.h
src/vertexnova/sc/frontend/: dxc_frontend.h  glslang_frontend.cpp  glslang_frontend.h  slang_frontend.h
src/vertexnova/sc/reflector/: spirvcross_reflector.cpp  spirvcross_reflector.h
src/vertexnova/sc/validator/: noop_validator.h  spirvtools_validator.cpp  spirvtools_validator.h
tests/: CMakeLists.txt  dispatch_cross_compiler_test.cpp  glslang_frontend_test.cpp  main.cpp  pipeline_build_manifest_test.cpp  result_code_test.cpp  shader_artifact_cache_test.cpp  shader_artifact_test.cpp  shader_bundle_test.cpp  shader_compiler_factory_test.cpp  shader_cross_compiler_test.cpp  shader_pipeline_builder_test.cpp  shader_pipeline_spec_includes_test.cpp  shader_pipeline_spec_test.cpp  spirvcross_reflector_test.cpp  tint_cross_compiler_test.cpp  vnesc_tests.cpp
tests/fixtures/: glslang_frontend_test_fixture.h  shader_pipeline_builder_test_fixture.h  shader_sources_fixture.h
tests/integration/shaders/minimal/: passthrough.vert
tests/integration/shaders/textured/: textured.frag
tools/: compile_shaders.py
tools/shader_compiler_cli/: CMakeLists.txt  main.cpp
